MAT-4780 Update Test Cases on Measure Group Change